Fixes for parameter on OSX not working